# CHESS

./: .gitignore  3_task_chess.py  4_task_chess.py  README.md  hex4.py  hexagonal.py  hz.py  main.py  pyproject.toml  txt.txt
src/: cells.py  errors.py  figure.py  gamemanager.py  helper.py  history.py  player.py  table.py
